Fix redirect sounds, and decoupling view

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,7 +22,7 @@ serializers {
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = kryo
-
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$PlayMediaMessage" = kryo
 
       "java.io.Serializable" = java
     }
@@ -49,9 +49,9 @@ serializers {
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandableActorMessage" = 27
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = 28
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = 29
-             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = 30
-             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LevelSetupMessage" = 31
-
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = 30
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LevelSetupMessage" = 31
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$PlayMediaMessage" = 32
 
             }
             classes = []
